<resources>
    <string name="app_name">Find Assistance</string>
    <string name="login">Log In</string>
    <string name="login_sign"> &#60;&#60; LogIn </string>
    <string name="loginAlready">Already a User?Login</string>
    <string name="enter_account_detail">Enter account detail.</string>
    <string name="password">Password</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up </string>
    <string name="signup_sign">Sign Up >></string>
    <string name="name">userX</string>
    <string name="phone">Enter Phone Number</string>
    <string name="email">Enter email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="store">Store</string>
    <string name="individual">Individual</string>
    <string name="terms_and_conditions_acceptance_statement">Some Terms and Conditions</string>
    <string name="error_empty_interest">Enter at least one interest.</string>
    <string name="error_empty_name">Name cannot be empty</string>
    <string name="error_empty_phone">Contact Number cannot be empty</string>
    <string name="error_empty_email">Email cannot be empty</string>
    <string name="error_empty_password">Password cannot be empty</string>
    <string name="error_not_matching_passwords">Passwords are not matching</string>
    <string name="error_checkbox">Accept the terms and conditions to sign up.</string>
    <string name="welcome_in_the_app">Welcome in the App</string>
    <string name="log_out">Log Out</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="oddJobs">OddJobs</string>
    <string name="urgent">Would you say it\'s urgent?</string>
    <string name="post">PostQuery</string>
    <string name="enter_the_type_of_job">Enter assistance Title/Type .</string>
    <string name="jobTitle">JobTitle</string>
    <string name="jobPay">Payment</string>
    <string name="enter_pay">How much would you pay for it?</string>
    <string name="negotiable">Can the price be negotiated?</string>
    <string name="jobDay">Date</string>
    <string name="jobDescription">Job Description :</string>
    <string name="enter_day">Enter the date.(DD/MM/YYYY)</string>
    <string name="enter_desc">Enter Description</string>
    <string name="postQuery">Post</string>
    <string name="about_the_job">About the Job</string>
    <string name="jobCategory">Category</string>
    <string name="applyButton">Seek</string>
    <string name="orderhistory">Request History </string>
    <string name="notification">Notifications</string>
    <string name="urgentRequest">This is an Urgent Request.</string>
    <string name="closedialog">CloseDialog</string>
    <string name="moreOrLess"> &#160;  more or less.</string>
    <string name="has_responded_to_your_request">&#160; has responded to your request titled &#160;</string>
    <string name="contact_him_her">Contact Him/Her.</string>
    <string name="welcomeMsg">&#160; Welcome to our app. Hope you have a terrific experience.</string>
    <string name="nameOnly">Enter your full name</string>
    <string name="email_com">Email@gmail.com</string>
    <string name="phone_no">Phone no</string>
    <string name="change_password">Change Password</string>
    <string name="sample_text">Working on it</string>
    <string name="applogo">appLogo</string>
    <string name="search_item">search for tags</string>
    <string name="hello">Hello&#160;</string>
    <string name="username">UserName</string>
    <string name="filter">Filter</string>
    <string name="profileimage">profileImage</string>
    <string name="jobTags">comma(,) separated 5 tags</string>
    <string name="jTags">Tags</string>
    <string name="tag1">Tag1</string>
    <string name="tag2">Tag2</string>
    <string name="tag5">Tag5</string>
    <string name="tag4">tag4</string>
    <string name="tag3">Tag3</string>
    <string name="notifications">Notifications</string>
    <string name="complete_your_profile">Complete Your Profile:</string>
    <string name="enter_you_age">Enter you Age</string>
    <string name="enter_gender">Enter your Gender</string>
    <string name="enter_interest">Enter your interests (comma separated)</string>
    <string name="done">Done!</string>
    <string name="age_and_gender">Age, G</string>
    <string name="interest">Interests:&#160;</string>
    <string name="okay">Okay!</string>
    <string name="error_empty_age">Age cannot be empty</string>
    <string name="error_empty_gender">Gender cannot be empty</string>
    <string name="error_gender">Can be \"Female\" or \"Male\" or \"Other\"</string>
    <string name="interested_in">Interested in:&#160; </string>
    <string name="load_dialer">load Dialer</string>
    <string name="callUser">Call this User.</string>
    <string name="menu_in_profile_fragment">menu in profile fragment</string>
    <string name="respondedTo">Your Responses</string>
    <string name="error_empty_tags">At least enter one tag.</string>
    <string name="error_empty_space">Field cannot be empty.</string>
    <string name="error_invalid_date">Invalid. Use format DD/MM/YYYY</string>
    <string name="helperTextPayment">&#160;&#160;&#160;&#160;Enter any number or \'0\' for Paid Accordingly</string>
    <string name="arrowDown">Arrow Down</string>
    <string name="feedback">Feedback</string>
    <string name="none">None</string>


    <string name="feedback_sendfeedback">Send us your feedback!</string>
    <string name="feedback_feedbacktxt">Do you have a suggestion or want to report a bug?\nLet us know in the field below.</string>
    <string name="feedback_email">example@email.com</string>
    <string name="feedback_message">Message</string>
    <string name="feedback_feedbackmessagehint">Describe your experience here</string>
    <string name="feedback_sendfeedbackbtn">Send Feedback</string>
    <string name="feedback_suggestion">Suggestion</string>
    <string name="feedback_bug">Bug</string>
    <string name="feeedback_others">Others</string>
    <string name="feedback_category">Category</string>
    <string name="feedback_emailhint">Your email ID</string>
    <string name="feedback_experience">How was your experience?</string>
    <string name="email_error">Email ID can\'t be left blank</string>
    <string name="valid_error">Please enter a valid email address</string>
    <string name="msg_error">Message can\'t be left blank</string>
    <string name="char_error">Please don\'t exceed the character limit</string>
    <string name="feedback_thank">Thank you for your feedback!</string>
    <string name="input">Please fill in the input fields and/or assign a rating</string>
    <string name="filter_only_urgent">Filter:Urgent</string>
    <string name="sort_by_date">Date</string>
    <string name="sort">Sort</string>
    <string name="namex">Name</string>
    <string name="null_history">No Request History</string>
    <string name="null_myresponses">You have not responded to any request</string>
    <string name="no_notification">No Notification</string>
    <string name="null_response">No Response Received</string>
</resources>