<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bttmHome"
        android:icon="@drawable/ic_baseline_home_24"
        android:visible="true"
        android:enabled="true"
        android:title="@string/home" />


    <item
        android:id="@+id/bttmPost"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_post_add_24"
        android:title="@string/post" />

    <item
        android:id="@+id/bttmNotification"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:title="@string/notification" />

    <item
        android:id="@+id/bttmProfile"
        android:icon="@drawable/ic_baseline_profile"
        android:enabled="true"
        android:title="@string/profile" />

</menu>