<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_rectangle">

    <ImageButton
        android:id="@+id/btnOkay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@color/white"
        android:contentDescription="@string/closedialog"
        android:src="@drawable/ic_baseline_close_24" />


    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@id/btnOkay"
        android:contentDescription="@string/profileimage"
        android:src="@drawable/ic_baseline_account_box_24"
        app:tint="@color/yellowPerson" />

    <TextView
        android:id="@+id/responderName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileImage"
        android:layout_marginTop="6dp"
        android:gravity="center_horizontal"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/responderAgeGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/responderName"
        android:layout_marginTop="2dp"
        android:gravity="center_horizontal"
        android:text="@string/age_and_gender"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/responderEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/responderAgeGender"
        android:layout_marginTop="2dp"
        android:gravity="center_horizontal"
        android:text="@string/email_com"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/responderContactNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/responderEmail"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:text="@string/phone_no"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/profileResIntereststv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/responderContactNo"
        android:layout_marginTop="2dp"
        android:gravity="center_horizontal"
        android:text="@string/interest"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/profileResInterests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileResIntereststv"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_horizontal"
        android:text="@string/none"
        android:textColor="@color/black"
        android:textSize="20sp" />


    <Button
        android:id="@+id/ButtonContactNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileResInterests"
        android:layout_centerInParent="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/white_rectangle"
        android:text="@string/callUser"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary" />

</RelativeLayout>