<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="3dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="3dp"
    app:cardCornerRadius="8dp">

    <RelativeLayout
        android:id="@+id/queryCard"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/white"
        android:padding="8dp">

        <TextView
            android:id="@+id/jobTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="4dp"
            android:layout_toStartOf="@id/imgBtnAddUrgent"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/jobTitle"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imgBtnAddUrgent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="4dp"
            android:background="@drawable/ic_baseline_urgent"
            android:visibility="invisible"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/jobDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/jobTitle"
            android:layout_marginTop="4dp"
            android:text="@string/jobDay"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/jobPayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/jobDate"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:text="@string/jobPay"
            android:textSize="15sp" />

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/jobPayment">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tagBox1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:visibility="gone"
                    android:background="@drawable/tag_rectangle"
                    android:padding="8dp"
                    android:text="@string/tag1"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tagBox2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/tag_rectangle"
                    android:padding="8dp"
                    android:visibility="gone"
                    android:text="@string/tag2"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tagBox3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:visibility="gone"
                    android:background="@drawable/tag_rectangle"
                    android:padding="8dp"
                    android:text="@string/tag3"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tagBox4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/tag_rectangle"
                    android:padding="8dp"
                    android:text="@string/tag4"
                    android:visibility="gone"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tagBox5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/tag_rectangle"
                    android:padding="8dp"
                    android:text="@string/tag5"
                    android:visibility="gone"
                    android:textSize="16sp" />
            </LinearLayout>
        </HorizontalScrollView>


    </RelativeLayout>

</androidx.cardview.widget.CardView>