<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.ProfileFragment">


    <View
        android:id="@+id/LinearProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/profileDetails"
        android:layout_alignParentTop="true"
        android:background="@drawable/trending_background" />

    <ProgressBar
        android:id="@+id/progressBarProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/forAlignment2"
        android:layout_centerInParent="true"
        android:padding="3dp"
        android:background="@color/colorPrimaryLight"
        />


    <View
        android:id="@+id/forAlignment1"
        android:layout_width="0dp"
        android:layout_height="5dp"
        android:layout_marginTop="70dp" />

    <!--Profile Details-->
    <RelativeLayout
        android:id="@+id/profileDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="3dp"
        android:layout_toEndOf="@id/profileImage"
        android:paddingStart="15dp"
        android:paddingEnd="5dp">

        <ImageButton
            android:id="@+id/profileMenuButton"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/menu_in_profile_fragment"
            android:src="@drawable/ic_baseline_menu_dot"
            android:tint="@color/white" />


        <TextView
            android:id="@+id/profileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="60dp"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profileAgeGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profileName"
            android:layout_marginStart="3dp"
            android:layout_marginTop="2dp"
            android:text="@string/age_and_gender"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/profileEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profileAgeGender"
            android:layout_marginStart="3dp"
            android:layout_marginTop="2dp"
            android:text="@string/email_com"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/profileContactNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profileEmail"
            android:layout_marginStart="3dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="25dp"
            android:text="@string/phone_no"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <!--        <TextView-->
        <!--            android:id="@+id/changePassword"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_below="@id/profileContactNo"-->
        <!--            android:layout_marginStart="3dp"-->
        <!--            android:layout_marginTop="8dp"-->
        <!--            android:text="@string/change_password"-->
        <!--            android:textColor="@color/white"-->
        <!--            android:textSize="17sp" />-->


    </RelativeLayout>


    <View
        android:id="@+id/forAlignment2"
        android:layout_width="0dp"
        android:layout_height="3dp"
        android:layout_below="@id/profileDetails"
        android:layout_marginTop="30dp" />
    <!--Profile Picture-->
    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/forAlignment1"
        android:layout_alignBottom="@id/forAlignment2"
        android:layout_marginStart="30dp"
        android:background="@drawable/profile_img"
        android:contentDescription="@string/profileimage"
        android:src="@drawable/ic_baseline_account_box_24"
        app:tint="@color/yellowPerson" />


    <RelativeLayout
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileImage">
        <!--    complete rest of the profile-->
        <RelativeLayout
            android:id="@+id/CompleteProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/tag_rectangle"
            android:visibility="gone">

            <TextView
                android:id="@+id/titleCompleteProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:gravity="center"
                android:text="@string/complete_your_profile"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/EnterAgeTI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/titleCompleteProfile"
                android:hint="@string/enter_you_age"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:startIconDrawable="@drawable/ic_baseline_cake_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EnterAgeTIE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/EnterGenderTI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/EnterAgeTI"

                android:layout_marginTop="5dp"
                android:hint="@string/enter_gender"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:startIconDrawable="@drawable/ic_gender">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EnterGenderTIE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textAutoComplete" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/EnterInterest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/EnterGenderTI"
                android:layout_marginTop="5dp"
                android:hint="@string/enter_interest"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                app:startIconDrawable="@drawable/ic_baseline_favorite_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/EnterInterestE"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnProfileCompleted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/EnterInterest"
                android:layout_alignParentEnd="true"
                android:layout_margin="6dp"
                android:background="@drawable/white_rectangle"
                android:text="@string/done"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary" />
        </RelativeLayout>


        <TextView
            android:id="@+id/profileInterests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/CompleteProfile"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/shape_stroke"
            android:drawablePadding="8dp"
            android:padding="10dp"
            android:text="@string/interest"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/ic_baseline_favorite_24"
            app:drawableTint="@color/scarlet" />

        <TextView
            android:id="@+id/respondedTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/profileInterests"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:drawablePadding="8dp"
            android:text="@string/respondedTo"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/ic_baseline_response_made_24"
            app:drawableTint="@color/orangeDifferent" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/respondedTo"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/arrowDown"
            android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />


        <!--orderHistory-->

        <TextView
            android:id="@+id/OrderHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/respondedTo"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="5dp"
            android:drawablePadding="8dp"
            android:text="@string/orderhistory"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:drawableStartCompat="@drawable/ic_baseline_history_24"
            app:drawableTint="@color/orangeDifferent" />

        <ImageButton
            android:id="@+id/orderHistoryExpandButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/OrderHistory"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/orderhistory"
            android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/OrderHistory"
            android:fillViewport="true">

            <TextView
                android:id="@+id/sampleOrderHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="8dp"
                android:padding="5dp"
                android:background="@drawable/tag_rectangle"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:visibility="gone" />
        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

</RelativeLayout>